# crossmatrix

./: Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  server.json
.github/workflows/: ci.yml  release.yml
adr/: 0002-crossmatrix-standalone-crate.md  0003-crossmatrix-mcp-contract.md  0004-config-data-separation-and-schema-family.md
crates/crossmatrix/: Cargo.toml  README.md
crates/crossmatrix-mcp/: Cargo.toml  README.md
crates/crossmatrix-mcp/schema/: crossmatrix-config.schema.json
crates/crossmatrix-mcp/src/: lib.rs  main.rs  merge.rs  schema_types.rs  store.rs
crates/crossmatrix/schema/: README.md
crates/crossmatrix/src/: lib.rs
crates/crossmatrix/tests/: sample_configs.rs
examples/: README.md  qfd-fmeca-3axis.json  travel-mug-3axis.json
examples/split/: demo.state.json  hoq.config.json  qfd-fmeca.dimensions.json
schemas/: README.md  crossmatrix-dimensions.schema.json  crossmatrix-mcp.schema.json  crossmatrix-state.schema.json  crossmatrix.schema.json
