[package]
name = "crossmatrix-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM-facing Model Context Protocol (MCP) server for the crossmatrix weighted cross-reference engine: mutation-first, observation-only writes plus engine-computed analyses, over durable Configuration / Dimensions / State documents."
readme = "README.md"
keywords = ["mcp", "house-of-quality", "qfd", "cross-reference", "llm"]
categories = ["science", "data-structures"]
documentation = "https://docs.rs/crossmatrix-mcp"
# repository / homepage: set to the canonical git URL before publishing.

[dependencies]
anyhow = "1.0.103"
crossmatrix = { version = "0.2.0", path = "../crossmatrix" }
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
typify = "0.7.0"

[dev-dependencies]
tempfile = "3.23.1"
