[package]
name = "crossmatrix"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A sparse, configurable, N-dimensional weighted cross-reference engine (generalized House of Quality): observation-only, valence-by-separation, with fixed operations (marginalize / contract / findings / tensions) over typify-generated types."
readme = "README.md"
keywords = ["house-of-quality", "qfd", "cross-reference", "sparse", "matrix"]
categories = ["data-structures", "science", "mathematics"]
documentation = "https://docs.rs/crossmatrix"
repository = "https://github.com/praxec/crossmatrix"
homepage = "https://github.com/praxec/crossmatrix"

[dependencies]
nalgebra = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sprs = "0.11.4"
thiserror = "2.0.18"
typify = "0.7.0"
